--- a/index.html
+++ b/index.html
@@ -57,37 +57,37 @@
   <!-- Portfolio/Expériences -->
 
   <section id="portfolio">
-    <h2>Portfolio / Expériences</h2>
+    <h2>Réalisations</h2>
     <div class="portfolio-item">
-      <h3>Projet 1</h3>
-      <p>Description du projet...</p>
-      <a href="https://github.com/ton-github/projet-1" target="_blank">Voir le projet</a>
+      <h3>Différentes pages web</h3>
+      <p>Plusieurs pages web suivant mes inspirations avec comme theme central le ciel</p>
+      <a href="https://github.com/laineaunelia/TentativePortefolio" target="_blank">Voir le projet</a>
     </div>  
   </section>
 
   <section id="carousel">
-    <h2>Mes Réalisations</h2>
+    <h2>Mes Réalisations Numérique avec IA</h2>
     <div id="portfolioCarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="/image/image1.png" class="d-block w-100" alt="Projet 1">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Projet 1</h5>
-            <p>Description du projet 1.</p>
+            <h5>Fond d'écran</h5>
+            <p>Inspiration le petit prince</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="/image/image2.png" class="d-block w-100" alt="Projet 2">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Projet 2</h5>
-            <p>Description du projet 2.</p>
+            <h5>Banière Facebook</h5>
+            <p>Sun Wukong et paysage temple Japonais</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="/image/image3.png" class="d-block w-100" alt="Projet 3">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Projet 3</h5>
-            <p>Description du projet 3.</p>
+            <h5>Banière Linkedin</h5>
+            <p>Un mélange de mes passions en image</p>
           </div>
         </div>
       </div>
@@ -106,7 +106,7 @@
 
   <section id="contact">
     <h2>Contactez-moi</h2>
-    <form action="https://formspree.io/f/ton-email" method="POST">
+    <form action="laineaunelia@gmail.com" method="POST">
       <label for="name">Nom :</label>
       <input type="text" id="name" name="name" required>
 
@@ -127,7 +127,6 @@
       <a href="https://www.linkedin.com/in/aunelia/" target="_blank">LinkedIn</a> | 
       <a href="https://github.com/laineaunelia" target="_blank">GitHub</a>
     </p>
-    <div id="qrcode"></div> <!-- QR Code sera généré ici -->
   </footer>
 
   <!-- JS -->
