--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   <section id="contact">
     <h2>Contactez-moi</h2>
-    <form action="laineaunelia@gmail.com" method="POST">
+    <form action=""https://formspree.io/f/ton-email" method="POST">
       <label for="name">Nom :</label>
       <input type="text" id="name" name="name" required>
 
