--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <!-- À propos -->
    <section>
+    <img src="/image/imagepp.jpg" class="" alt="" height="350px">
     <h1>Aunélia Laîné</h1>
     <h2>Alternant Développeur Web</h2>
     <h3>04/11/1994<br>29 ans<br>Nationalité Française</h3>
@@ -41,7 +42,7 @@
   <section id="skills">
     <h2>Compétences</h2>
     <ul>
-     <li> Base solide dans le langage HTML/CSS</li>
+     <li>Base solide dans le langage HTML/CSS</li>
      <li>Possède les bases en Python/Javascript/PHP/</li>
      <li>A déjà utilisé Django - GIT - SQL - MariaDB </li>
      </ul>
